--- a/style.css
+++ b/style.css
@@ -19,3 +19,15 @@ float: right;
 {
 color: #ff7700;
 }
+.row::after {
+content: "";
+clear: both;
+display: table;
+}
+
+.travel_mainDiv{
+    float: left;
+    width: 33.33%;
+    padding: 5px;
+    border: 1px solid #c7c7c7;
+}
